--- a/docs/dendron.yml
+++ b/docs/dendron.yml
@@ -83,6 +83,8 @@ preview:
     enableKatex: true
     automaticallyShowPreview: false
 publishing:
+    assetsPrefix: /dendron-test
+    siteUrl: https://d33bs.github.io
     enableFMTitle: true
     enableNoteTitleForLink: true
     enableMermaid: true
