--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: yarn
 
     - name: Initialize or pull nextjs template
-      run: "(test -d docs/.next) && (echo 'updating dendron next...' && cd docs/.next && git reset --hard && git pull && yarn && cd ..) || (echo 'init dendron next' && yarn dendron publish init --wsRoot docs)"
+      run: "(test -d docs/.next) && (echo 'updating dendron next...' && cd docs/.next && git reset --hard && git pull && yarn && cd ../..) || (echo 'init dendron next' && yarn dendron publish init --wsRoot docs)"
 
     - name: Restore Next cache
       uses: actions/cache@v2
@@ -47,6 +47,6 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: pages
-        publish_dir: docs/
+        publish_dir: docs/docs
         force_orphan: true
         #cname: example.com
