docs path for yarn cmd

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,17 +30,17 @@ jobs:
       run: yarn
 
     - name: Initialize or pull nextjs template
-      run: "(test -d docs/.next) && (echo 'updating dendron next...' && cd docs/.next && git reset --hard && git pull && yarn && cd ../..) || (echo 'init dendron next' && yarn dendron publish init --wsRoot docs)"
+      run: "(test -d docs/.next) && (echo 'updating dendron next...' && cd docs/.next && git reset --hard && git pull && yarn && cd ../..) || (echo 'init dendron next' && yarn dendron publish init --wsRoot ./docs)"
 
     - name: Restore Next cache
       uses: actions/cache@v2
       with:
-        path: .next/.next/cache
+        path: docs/.next/.next/cache
         # Generate a new cache whenever packages or source files change.
         key: ${{ runner.os }}-nextjs-${{ hashFiles('.next/yarn.lock', '.next/package-lock.json') }}-${{ hashFiles('.next/**.[jt]s', '.next/**.[jt]sx') }}
 
     - name: Export notes
-      run: yarn dendron publish export --target github --yes --wsRoot docs
+      run: yarn dendron publish export --target github --yes --wsRoot ./docs
 
     - name: Deploy site
       uses: peaceiris/actions-gh-pages@v3
